--- a/output/team.html
+++ b/output/team.html
@@ -23,7 +23,46 @@
     <div class="container">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
-                
+                <div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">John Adams</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 6337</li>
+            <li class="list-group-item">Email: <a href="mailto:adamsj@myteam.com">adamsj@myteam.com</a></li>
+            <li class="list-group-item">Office number: (345)453-0913</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Thomas Jefferson</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 1743</li>
+            <li class="list-group-item">Email: <a href="mailto:jeffersont@myteam.com">jeffersont@myteam.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/libertyboy1801" target="_blank" rel="noopener noreferrer">libertyboy1801</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Amerigo Vespucci</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 1454</li>
+            <li class="list-group-item">Email: <a href="mailto:vespuccia@myteam.com">vespuccia@myteam.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/ididitfirst" target="_blank" rel="noopener noreferrer">ididitfirst</a></li>
+        </ul>
+    </div>
+</div>
+
             </div>
         </div>
     </div>
